<resources>
    <string name="app_name">Glassblower\'s Toolchest</string>
    <string name="marble_calc">Marble Calculator</string>
    <string name="anneal_o_matic">Anneal-o-Matic</string>
    <string name="polariscope">Polariscope</string>
    <string name="settings">Settings</string>
    <string name="certificate_creator">Cert Maker</string>
    <string name="social">Instagram</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cert_title">Title</string>
    <string name="cert_generate">Generate</string>
    <string name="action_settings">Settings</string>
    <string name="print_string">Print</string>



    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_which_coe">Which COE?</string>
    <string-array name="pref_coe">
        <item>33</item>
        <item>90</item>
        <item>96</item>
        <item>104</item>
    </string-array>
    <string-array name="pref_coe_list_values">
        <item>33</item>
        <item>90</item>
        <item>96</item>
        <item>104</item>
    </string-array>

    <!-- Example settings for Data & Sync
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    -->

    <!-- Example settings for Notifications
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    -->

    <string name="insta_uri">http://instagram.com/_u/bertlangan</string>
    <string name="coa_generator">COA Generator</string>
    <string name="CertTitle">Title of Work</string>
    <string name="Artist">Artist Name</string>
    <string name="DateCreated">Date Created</string>
    <string name="certSize">Size of Work</string>
    <string name="certWeight">Weight of Work</string>
    <string name="certTechnique">Technique</string>
    <string name="certSigReads">Signature Reads</string>
    <string name="certOriginalOwner">Origin</string>
    <string name="help">\?</string>
    <string name="pick">PICK</string>
    <string name="rod_size">15 mm Rod Size</string>
    <string name="marble_size">2.0 inch Marble Size</string>
    <string name="Share">Share</string>
    <string name="Specify">Specify</string>
    <string name="DesiredDiameterInch">Enter Desired Diameter (Inches)</string>
    <string name="DesiredDiameterMM">Enter Desired Diameter (Millimeters)</string>
    <string name="calculation">Calculation</string>
    <string name="key">Key</string>
    <string name="step">Step</string>
    <string name="new_">New</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="desiredthickness">Enter Desired Thickness (Inches)</string>
    <string name="enter_a_schedule_name">Enter a Schedule Name</string>
    <string name="delete">Delete</string>
    <string name="certificate_name">Certificate Name</string>
    <string name="edit">Edit</string>
    <string name="MCMetricStarter">5.08 cm Marble Size</string>
    <string name="garage">Garage</string>
    <string name="strike">Strike</string>
    <string name="anneal_hint">The thickness entered should be doubled if the widest cross section is flat and rests on
        the kiln floor.
    </string>
    <string name="Location">Location</string>
</resources>
