<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/Artist"
        android:inputType="textCapWords"
        android:key="artist"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/Artist" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/Location"
        android:inputType="textCapWords"
        android:key="location"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/Location" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/DateCreated"
        android:inputType="textCapWords"
        android:key="field1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Field 1" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/certSize"
        android:inputType="textCapWords"
        android:key="field2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Field 2" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/certWeight"
        android:inputType="textCapWords"
        android:key="field3"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Field 3" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/certTechnique"
        android:inputType="textCapWords"
        android:key="field4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Field 4" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/certSigReads"
        android:inputType="textCapWords"
        android:key="field5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Field 5" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/certOriginalOwner"
        android:inputType="textCapWords"
        android:key="field6"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Field 6" />

</PreferenceScreen>
