<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg7"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MarbleCalcActivity">

    <Button
        android:id="@+id/btn_Anneal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="36dp"
        android:text="@string/anneal_o_matic"
        app:layout_constraintBottom_toBottomOf="@+id/btnShare"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnShare"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/Share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Anneal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCalculationResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".85"
        android:background="@color/cardview_dark_background"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Specify_Marble" />

    <SeekBar
        android:id="@+id/sb_MarbleSlider"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:alpha=".9"
        android:background="@color/colorPrimaryDark"
        android:progress="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Specify_Marble"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_RodSlider"
        app:layout_constraintVertical_bias="0.26999998" />

    <SeekBar
        android:id="@+id/sb_RodSlider"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:alpha=".9"
        android:background="@color/colorPrimaryDark"
        android:progress="13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/btn_Specify_Marble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Specify"
        app:layout_constraintBottom_toBottomOf="@+id/sb_MarbleSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sb_MarbleSlider" />

    <TextView
        android:id="@+id/tvMarbleValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/marble_size"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sb_MarbleSlider"
        app:layout_constraintEnd_toEndOf="@+id/tvRodValue"
        app:layout_constraintStart_toStartOf="@+id/tvRodValue" />

    <TextView
        android:id="@+id/tvRodValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/rod_size"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/sb_RodSlider"
        app:layout_constraintEnd_toEndOf="@+id/sb_RodSlider"
        app:layout_constraintStart_toStartOf="@+id/sb_RodSlider" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRodValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_Marble"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/marble_size"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/marble2" />

        <ImageView
            android:id="@+id/iv_Rod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="false"
            android:alpha=".5"
            android:contentDescription="@string/rod_size"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rod" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>